--- a/blocks/src/social-card/editor.scss
+++ b/blocks/src/social-card/editor.scss
@@ -2,16 +2,26 @@
  * The following styles get applied inside the editor only.
  *
  * Replace them with your own styles or remove the file completely.
- */
+ */    
 
  .wp-block-site-functionality-social-card {
     background-color: var(--wp--preset--color--white);
-    padding: 1rem;
 
     ul {
-        padding-left: 0;
+        margin-top: 0;
+        padding: 0;
+        list-style: none;
+        box-sizing: border-box;
     }
 
+    .share-actions {
+        padding: 0 1rem;
+
+        ul {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
  }
 
 .wp-block-site-functionality-social-card,
