--- a/blocks/src/social-card/editor.scss
+++ b/blocks/src/social-card/editor.scss
@@ -6,10 +6,22 @@
 
  .wp-block-site-functionality-social-card {
     background-color: var(--wp--preset--color--white);
-    padding: 1rem;
 
     ul {
-        padding-left: 0;
+        padding: 0;
+        margin-top: 0;
+        padding: 0;
+        list-style: none;
+        box-sizing: border-box;
+    }
+
+    .share-actions {
+        padding: 0 1rem;
+
+        ul {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
  }
